--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite1" class="navigator-link">
-              <span class="suite-name border-failed">Suite1</span>
+              <span class="suite-name border-skipped">Suite1</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -91,21 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods, 1 failed,  2 skipped,  1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Suite1" class="hide-methods failed suite-Suite1"> (hide)</a> <!-- hide-methods failed suite-Suite1 -->
-                      <a href="#" panel-name="suite-Suite1" class="show-methods failed suite-Suite1"> (show)</a> <!-- show-methods failed suite-Suite1 -->
-                    </span>
-                    <div class="method-list-content failed suite-Suite1">
-                      <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite1" title="retry.TestLogin" class="method navigator-link" hash-for-method="registerUsers">registerUsers</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Suite1 -->
+                    <span class="method-stats">4 methods,  2 skipped,  2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title skipped">Skipped methods</span>
@@ -138,6 +124,11 @@
                         <a href="#" panel-name="suite-Suite1" title="retry.TestLogin" class="method navigator-link" hash-for-method="doLogin">doLogin</a> <!-- method navigator-link -->
                       </span>
                       <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite1" title="retry.TestLogin" class="method navigator-link" hash-for-method="registerUsers">registerUsers</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                     </div> <!-- method-list-content passed suite-Suite1 -->
                   </li>
                 </ul>
@@ -150,25 +141,6 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite1" class="panel Suite1">
-          <div class="suite-Suite1-class-failed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
-              <span class="class-name">retry.TestLogin</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="registerUsers">
-                  </a> <!-- registerUsers -->
-                  <span class="method-name">registerUsers</span>
-                  <div class="stack-trace">java.lang.AssertionError: Execution Failed While Registering a User
-	at retry.TestLogin.registerUsers(TestLogin.java:18)
-... Removed 26 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite1-class-failed -->
           <div class="suite-Suite1-class-skipped">
             <div class="main-panel-header rounded-window-top">
               <img src="skipped.png"/>
@@ -180,9 +152,9 @@
                   <a name="registerUsers">
                   </a> <!-- registerUsers -->
                   <span class="method-name">registerUsers</span>
-                  <div class="stack-trace">java.lang.AssertionError: Execution Failed While Registering a User
+                  <div class="stack-trace">java.lang.AssertionError: expected [3] but found [1]
 	at retry.TestLogin.registerUsers(TestLogin.java:18)
-... Removed 26 stack frames
+... Removed 31 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -191,9 +163,9 @@
                   <a name="registerUsers">
                   </a> <!-- registerUsers -->
                   <span class="method-name">registerUsers</span>
-                  <div class="stack-trace">java.lang.AssertionError: Execution Failed While Registering a User
+                  <div class="stack-trace">java.lang.AssertionError: expected [3] but found [2]
 	at retry.TestLogin.registerUsers(TestLogin.java:18)
-... Removed 26 stack frames
+... Removed 31 stack frames
 </div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
@@ -210,6 +182,13 @@
                   <a name="doLogin">
                   </a> <!-- doLogin -->
                   <span class="method-name">doLogin</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registerUsers">
+                  </a> <!-- registerUsers -->
+                  <span class="method-name">registerUsers</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -273,11 +252,11 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'doLogin')
 data.setCell(0, 2, 'retry.TestLogin')
-data.setCell(0, 3, 16);
+data.setCell(0, 3, 17);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'registerUsers')
 data.setCell(1, 2, 'retry.TestLogin')
-data.setCell(1, 3, 3);
+data.setCell(1, 3, 5);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'registerUsers')
 data.setCell(2, 2, 'retry.TestLogin')
@@ -290,7 +269,7 @@ window.suiteTableData['Suite1']= { tableData: data, tableDiv: 'times-div-Suite1'
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 23 ms</span>
+              <span class="suite-total-time">Total running time: 26 ms</span>
               <div id="times-div-Suite1">
               </div> <!-- times-div-Suite1 -->
             </div> <!-- times-div -->
@@ -323,17 +302,15 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">registerUsers</span>
-                <span class="method-start">21 ms</span>
+                <span class="method-start">23 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">registerUsers</span>
-                <span class="method-start">30 ms</span>
+                <span class="method-start">34 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">registerUsers</span>
-                <span class="method-start">36 ms</span>
+                <span class="method-start">40 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
