--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,35 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Suite1</th></tr>
-<tr><td><a href="#t0">Login</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">87</td><td></td><td></td></tr>
+<tr><th colspan="7">Functional Suite</th></tr>
+<tr><td><a href="#t0">Login Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">55</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Validate Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">66</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Dependency Test</a></td><td class="num">2</td><td class="num attn">1</td><td class="num attn">1</td><td class="num">35</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t3">Failure Test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">9</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num attn">1</th><th class="num attn">3</th><th class="num">165</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite1</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">retry.TestLogin</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1594610694939</td><td rowspan="1">17</td></tr><tr class="passedeven"><td><a href="#m1">registerUsers</a></td><td rowspan="1">1594610694964</td><td rowspan="1">5</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase1</td><td><a href="#m0">doLogin</a></td><td rowspan="1">1594873121805</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m1">doUserReg</a></td><td rowspan="1">1594873121788</td><td rowspan="1">9</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Validate Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase2</td><td><a href="#m2">validateTitles</a></td><td rowspan="1">1594873122220</td><td rowspan="1">12</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Dependency Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m3">doUserReg</a></td><td rowspan="1">1594873122331</td><td rowspan="1">1</td></tr><tr><th colspan="4">Dependency Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">testcases.TestCase3</td><td><a href="#m4">doLogin</a></td><td rowspan="1">1594873122343</td><td rowspan="1">0</td></tr><tr><th colspan="4">Dependency Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.TestCase3</td><td><a href="#m5">fourthTest</a></td><td rowspan="1">1594873122359</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m6">thirdTest</a></td><td rowspan="1">1594873122350</td><td rowspan="1">4</td></tr></tbody>
+<tbody id="t3"><tr><th colspan="4">Failure Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.TestFailure</td><td><a href="#m7">doLogin</a></td><td rowspan="1">1594873122423</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Login</h2><h3 id="m0">retry.TestLogin#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">retry.TestLogin#registerUsers</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login Test</h2><h3 id="m0">testcases.TestCase1#doLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcases.TestCase1#doUserReg</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Validate Test</h2><h3 id="m2">testcases.TestCase2#validateTitles</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a><br/><br><br/><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [Yahoo.com] but found [Gmail.com],
+	Image not present. expected [false] but found [true],
+	Text box not present. expected [false] but found [true]
+	at testcases.TestCase2.validateTitles(TestCase2.java:42)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Dependency Test</h2><h3 id="m3">testcases.TestCase3#doUserReg</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a><br/><br><br/><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: User is not registered successfully.
+	at testcases.TestCase3.doUserReg(TestCase3.java:11)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">testcases.TestCase3#doLogin</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.Throwable: Method TestCase3.doLogin()[pri:2, instance:testcases.TestCase3@15d49048] depends on not successfully finished methods
+... Removed 18 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">testcases.TestCase3#fourthTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m6">testcases.TestCase3#thirdTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Failure Test</h2><h3 id="m7">testcases.TestFailure#doLogin</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages"><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank">Screenshot Link</a><br/><br><br/><a href = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg" target = "_blank"><img height= 200 width = 200 src = "C:\Users\hello\Documents\Java_Tests\Selenium_WebDriverManager_Tests\screenshot\error.jpg"></a></div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Failing the Login Test
+	at testcases.TestFailure.doLogin(TestFailure.java:10)
+... Removed 26 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
