--- a/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>25</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@66ea810]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>-59</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@66ea810]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@66ea810]">doLogin</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="959ca4">  <td>20/07/18 17:40:42</td>   <td>499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@461ad730]">doLogin</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@66ea810]">doUserReg</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="7e8ae7">  <td>20/07/18 17:40:42</td>   <td>439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@15d49048]">doUserReg</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="7e8ae7">  <td>20/07/18 17:40:42</td>   <td>457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@15d49048]">fourthTest</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>-30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/18 17:40:41</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="82ba93">  <td>20/07/18 17:40:41</td>   <td>-69</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@461ad730]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="82ba93">  <td>20/07/18 17:40:42</td>   <td>547</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@461ad730]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="7e8ae7">  <td>20/07/18 17:40:42</td>   <td>453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@15d49048]">thirdTest</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="e1d0a4">  <td>20/07/18 17:40:42</td>   <td>336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@6d5620ce]">validateTitles</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@77b14724]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@77b14724]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>20</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@77b14724]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>-42</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@77b14724]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@77b14724]">doLogin</td> 
+  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="cbb589">  <td>20/07/18 17:41:05</td>   <td>248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@35d08e6c]">doLogin</td> 
+  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@77b14724]">doUserReg</td> 
+  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="9aa67a">  <td>20/07/18 17:41:05</td>   <td>198</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@112f364d]">doUserReg</td> 
+  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="9aa67a">  <td>20/07/18 17:41:05</td>   <td>220</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@112f364d]">fourthTest</td> 
+  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@77b14724]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="7cf6bc">  <td>20/07/18 17:41:05</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@77b14724]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="89bec4">  <td>20/07/18 17:41:05</td>   <td>-58</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@35d08e6c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="89bec4">  <td>20/07/18 17:41:06</td>   <td>278</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@35d08e6c]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="9aa67a">  <td>20/07/18 17:41:05</td>   <td>211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@112f364d]">thirdTest</td> 
+  <td>main@753631393</td>   <td></td> </tr>
+<tr bgcolor="bdc4a2">  <td>20/07/18 17:41:05</td>   <td>110</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@52066604]">validateTitles</td> 
+  <td>main@753631393</td>   <td></td> </tr>
 </table>
