--- a/test-output/old/Functional Suite/methods.html
+++ b/test-output/old/Functional Suite/methods.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="82ba93">  <td>20/07/21 10:21:44</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@461ad730]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>11</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@66ea810]">&gt;&gt;creatingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@66ea810]">doUserReg</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>43</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&gt;&gt;launchBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>138</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@66ea810]">doLogin</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@66ea810]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="9d6878">  <td>20/07/21 10:21:44</td>   <td>142</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@66ea810]">&lt;&lt;closingDBConn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="e1d0a4">  <td>20/07/21 10:21:44</td>   <td>431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@6d5620ce]">validateTitles</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="7e8ae7">  <td>20/07/21 10:21:44</td>   <td>531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@15d49048]">doUserReg</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="7e8ae7">  <td>20/07/21 10:21:44</td>   <td>539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@15d49048]">thirdTest</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="7e8ae7">  <td>20/07/21 10:21:44</td>   <td>544</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@15d49048]">fourthTest</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="959ca4">  <td>20/07/21 10:21:44</td>   <td>604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@461ad730]">doLogin</td> 
-  <td>main@1423983012</td>   <td></td> </tr>
-<tr bgcolor="82ba93">  <td>20/07/21 10:21:44</td>   <td>664</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@461ad730]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1423983012</td>   <td></td> </tr>
+<tr bgcolor="93b76a">  <td>20/07/23 13:23:47</td>   <td>0</td> <td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:testcases.TestFailure@730d2164]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>19</td> <td>&nbsp;</td><td title="&gt;&gt;TestCase1.creatingDBConn()[pri:0, instance:testcases.TestCase1@d23e042]">&gt;&gt;creatingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@d23e042]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doUserReg()[pri:1, instance:testcases.TestCase1@d23e042]">doUserReg</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>95</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@d23e042]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>111</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestCase1.launchBrowser()[pri:0, instance:testcases.TestCase1@d23e042]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase1.doLogin()[pri:2, instance:testcases.TestCase1@d23e042]">doLogin</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestCase1.closeBrowser()[pri:0, instance:testcases.TestCase1@d23e042]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="ea9581">  <td>20/07/23 13:23:47</td>   <td>123</td> <td>&nbsp;</td><td title="&lt;&lt;TestCase1.closingDBConn()[pri:0, instance:testcases.TestCase1@d23e042]">&lt;&lt;closingDBConn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="67a4d3">  <td>20/07/23 13:23:48</td>   <td>536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase2.validateTitles()[pri:0, instance:testcases.TestCase2@2fb0623e]">validateTitles</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="928cad">  <td>20/07/23 13:23:48</td>   <td>647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.doUserReg()[pri:1, instance:testcases.TestCase3@78452606]">doUserReg</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="928cad">  <td>20/07/23 13:23:48</td>   <td>667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.thirdTest()[pri:3, instance:testcases.TestCase3@78452606]">thirdTest</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="928cad">  <td>20/07/23 13:23:48</td>   <td>675</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestCase3.fourthTest()[pri:4, instance:testcases.TestCase3@78452606]">fourthTest</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="6d84ad">  <td>20/07/23 13:23:48</td>   <td>760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestFailure.doLogin()[pri:0, instance:testcases.TestFailure@730d2164]">doLogin</td> 
+  <td>main@2144838275</td>   <td></td> </tr>
+<tr bgcolor="93b76a">  <td>20/07/23 13:23:48</td>   <td>813</td> <td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:testcases.TestFailure@730d2164]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2144838275</td>   <td></td> </tr>
 </table>
